Fix header on small screens

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,20 +1,34 @@
 .header {
-    margin: 1rem 1rem 0 1rem;
+  margin: 1rem 1rem 0 1rem;
 }
 .mainTitle {
-    font-weight: 700;
-    font-size: $h2;
-    display: inline-block;
-    margin-right: 1rem;
-    // border-bottom: 4px solid $light_blue;
+  font-weight: 700;
+  font-size: $h2;
+  display: inline-block;
+  margin-right: 1rem;
+  // border-bottom: 4px solid $light_blue;
 }
 .headerLink {
-    color: $black;
-    text-decoration: none;
+  color: $black;
+  text-decoration: none;
+  display: block;
+}
+.headerButton {
+  float: none;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 @media (min-width: 768px) {
-    .header {
-        margin: 2rem 2rem 0 2rem;
-    }
+  .header {
+    margin: 2rem 2rem 0 2rem;
+  }
+  .headerLink {
+    display: inline-block;
+  }
+  .headerButton {
+    float: right;
+    margin-bottom: 0;
+    margin-top: 2rem;
+  }
 }
